--- a/data/icons/flags.qrc
+++ b/data/icons/flags.qrc
@@ -84,6 +84,7 @@
         <file alias="rs.svg">3rdparty/circle-flags/flags/rs.svg</file>
         <file alias="ru.svg">3rdparty/circle-flags/flags/ru.svg</file>
         <file alias="rw.svg">3rdparty/circle-flags/flags/rw.svg</file>
+        <file alias="sa.svg">3rdparty/circle-flags/flags/sa.svg</file>
         <file alias="sd.svg">3rdparty/circle-flags/flags/sd.svg</file>
         <file alias="se.svg">3rdparty/circle-flags/flags/se.svg</file>
         <file alias="si.svg">3rdparty/circle-flags/flags/si.svg</file>
