Update all branding and links

--- a/src/settings/settingsdialog.ui
+++ b/src/settings/settingsdialog.ui
@@ -1707,7 +1707,7 @@
                <item row="2" column="1">
                 <widget class="QLabel" name="sourceLabel">
                  <property name="text">
-                  <string notr="true">&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://github.com/crow-translate/crow-translate&quot;&gt;crow-translate&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                  <string notr="true">&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://invent.kde.org/office/crow-translate/&quot;&gt;crow-translate&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                  </property>
                  <property name="openExternalLinks">
                   <bool>true</bool>
