Rewrite API to use Mozhi
We switched to use [Mozhi](https://codeberg.org/aryak/mozhi). It will significantly improve privacy and extend engines support.

--- a/data/icons/engines/engines.qrc
+++ b/data/icons/engines/engines.qrc
@@ -3,11 +3,13 @@
 <!-- SPDX-License-Identifier: GPL-3.0-or-later -->
 
 <RCC>
-    <qresource prefix="/icons/engines/">
+    <qresource prefix="/icons/engines">
         <file>google.svg</file>
         <file>yandex.svg</file>
-        <file>bing.svg</file>
+        <file>deepl.svg</file>
+        <file>duckduckgo.svg</file>
         <file>libretranslate.svg</file>
-        <file>lingva.svg</file>
+        <file>mymemory.svg</file>
+        <file>reverso.svg</file>
     </qresource>
 </RCC>
