--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -213,11 +213,20 @@
           </item>
           <item>
            <property name="text">
-            <string notr="true">Bing</string>
+            <string notr="true">DeepL</string>
            </property>
            <property name="icon">
             <iconset resource="../data/icons/engines/engines.qrc">
-             <normaloff>:/icons/engines/bing.svg</normaloff>:/icons/engines/bing.svg</iconset>
+             <normaloff>:/icons/engines/deepl.svg</normaloff>:/icons/engines/deepl.svg</iconset>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string notr="true">DuckDuckGo</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../data/icons/engines/engines.qrc">
+             <normaloff>:/icons/engines/duckduckgo.svg</normaloff>:/icons/engines/duckduckgo.svg</iconset>
            </property>
           </item>
           <item>
@@ -231,11 +240,20 @@
           </item>
           <item>
            <property name="text">
-            <string notr="true">Lingva</string>
+            <string notr="true">MyMemory</string>
            </property>
            <property name="icon">
             <iconset resource="../data/icons/engines/engines.qrc">
-             <normaloff>:/icons/engines/lingva.svg</normaloff>:/icons/engines/lingva.svg</iconset>
+             <normaloff>:/icons/engines/mymemory.svg</normaloff>:/icons/engines/mymemory.svg</iconset>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string notr="true">Reverso</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../data/icons/engines/engines.qrc">
+             <normaloff>:/icons/engines/reverso.svg</normaloff>:/icons/engines/reverso.svg</iconset>
            </property>
           </item>
          </widget>
