--- a/src/settings/settingsdialog.ui
+++ b/src/settings/settingsdialog.ui
@@ -1452,36 +1452,16 @@
                 </widget>
                </item>
                <item row="3" column="0">
-                <widget class="QLabel" name="mailTitleLabel">
+                <widget class="QLabel" name="backendTitleLabel">
                  <property name="text">
                   <string>Translation backend:</string>
                  </property>
                 </widget>
                </item>
                <item row="3" column="1">
-                <widget class="QLabel" name="mailLabel">
+                <widget class="QLabel" name="backendLabel">
                  <property name="text">
                   <string notr="true">&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://codeberg.org/aryak/mozhi&quot;&gt;Mozhi&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-                 </property>
-                 <property name="openExternalLinks">
-                  <bool>true</bool>
-                 </property>
-                 <property name="textInteractionFlags">
-                  <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
-                 </property>
-                </widget>
-               </item>
-               <item row="4" column="0">
-                <widget class="QLabel" name="flagIconsTitleLabel">
-                 <property name="text">
-                  <string>Icons:</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="4" column="1">
-                <widget class="QLabel" name="flagIconsLabel">
-                 <property name="text">
-                  <string notr="true">&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://invent.kde.org/frameworks/breeze-icons&quot;&gt;Breeze&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                  </property>
                  <property name="openExternalLinks">
                   <bool>true</bool>
