Use application ID for icon name to fix Flatpak

--- a/data/icons/app/app.qrc
+++ b/data/icons/app/app.qrc
@@ -4,9 +4,9 @@
 
 <RCC>
     <qresource prefix="/icons/hicolor">
-        <file alias="scalable/apps/crow-translate-tray-dark.svg">sc-status-crow-translate-tray-dark.svg</file>
-        <file alias="scalable/apps/crow-translate-tray-light.svg">sc-status-crow-translate-tray-light.svg</file>
-        <file alias="scalable/apps/crow-translate-tray.svg">sc-apps-crow-translate.svg</file>
-        <file alias="scalable/apps/crow-translate.svg">sc-apps-crow-translate.svg</file>
+        <file alias="scalable/apps/org.kde.CrowTranslate-tray-dark.svg">sc-status-org.kde.CrowTranslate-tray-dark.svg</file>
+        <file alias="scalable/apps/org.kde.CrowTranslate-tray-light.svg">sc-status-org.kde.CrowTranslate-tray-light.svg</file>
+        <file alias="scalable/apps/org.kde.CrowTranslate-tray.svg">sc-apps-org.kde.CrowTranslate.svg</file>
+        <file alias="scalable/apps/org.kde.CrowTranslate.svg">sc-apps-org.kde.CrowTranslate.svg</file>
     </qresource>
 </RCC>
