--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -14,7 +14,7 @@
    <string notr="true">Crow Translate</string>
   </property>
   <property name="windowIcon">
-   <iconset theme="crow-translate">
+   <iconset theme="org.kde.CrowTranslate">
     <normaloff>.</normaloff>.</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
