--- a/src/settings/settingsdialog.ui
+++ b/src/settings/settingsdialog.ui
@@ -540,7 +540,7 @@
                    <string>Default</string>
                   </property>
                   <property name="icon">
-                   <iconset theme="crow-translate-tray">
+                   <iconset theme="org.kde.CrowTranslate-tray">
                     <normaloff>.</normaloff>.</iconset>
                   </property>
                  </item>
@@ -549,7 +549,7 @@
                    <string>Monochrome (dark theme)</string>
                   </property>
                   <property name="icon">
-                   <iconset theme="crow-translate-tray-light">
+                   <iconset theme="org.kde.CrowTranslate-tray-light">
                     <normaloff>.</normaloff>.</iconset>
                   </property>
                  </item>
@@ -558,7 +558,7 @@
                    <string>Monochrome (light theme)</string>
                   </property>
                   <property name="icon">
-                   <iconset theme="crow-translate-tray-dark">
+                   <iconset theme="org.kde.CrowTranslate-tray-dark">
                     <normaloff>.</normaloff>.</iconset>
                   </property>
                  </item>
