Use icons that are compatible with Adwaita

--- a/data/icons/icon-theme.qrc
+++ b/data/icons/icon-theme.qrc
@@ -18,7 +18,6 @@
         <file alias="32x32/categories/preferences-system.svg">3rdparty/breeze-icons/icons/apps/32/systemsettings.svg</file>
         <file alias="32x32/categories/scanner.svg">3rdparty/breeze-icons/icons/preferences/32/preferences-devices-scanner.svg</file>
         <file alias="16x16/actions/application-exit.svg">3rdparty/breeze-icons/icons/actions/16/application-exit.svg</file>
-        <file alias="16x16/actions/configure.svg">3rdparty/breeze-icons/icons/actions/16/configure.svg</file>
         <file alias="16x16/actions/dialog-cancel.svg">3rdparty/breeze-icons/icons/actions/16/dialog-cancel.svg</file>
         <file alias="16x16/actions/dialog-error.svg">3rdparty/breeze-icons/icons/status/16/data-error.svg</file>
         <file alias="16x16/actions/dialog-ok-apply.svg">3rdparty/breeze-icons/icons/actions/16/dialog-ok-apply.svg</file>
@@ -37,10 +36,11 @@
         <file alias="16x16/actions/media-playback-start.svg">3rdparty/breeze-icons/icons/actions/16/media-playback-start.svg</file>
         <file alias="16x16/actions/media-playback-stop.svg">3rdparty/breeze-icons/icons/actions/16/media-playback-stop.svg</file>
         <file alias="16x16/actions/object-flip-horizontal.svg">3rdparty/breeze-icons/icons/actions/16/object-flip-horizontal.svg</file>
+        <file alias="16x16/actions/preferences-other.svg">3rdparty/breeze-icons/icons/actions/16/application-menu.svg</file>
         <file alias="16x16/actions/text-speak.svg">3rdparty/breeze-icons/icons/actions/16/text-speak.svg</file>
         <file alias="16x16/actions/transform-crop.svg">3rdparty/breeze-icons/icons/actions/16/transform-crop.svg</file>
         <file alias="16x16/actions/view-refresh.svg">3rdparty/breeze-icons/icons/actions/16/view-refresh.svg</file>
-        <file alias="16x16/actions/window.svg">3rdparty/breeze-icons/icons/actions/16/window.svg</file>
+        <file alias="16x16/actions/widnow-maximize.svg">3rdparty/breeze-icons/icons/actions/16/go-up.svg</file>
         <file alias="16x16/places/folder.svg">3rdparty/breeze-icons/icons/places/16/folder.svg</file>
         <file>index.theme</file>
     </qresource>
