--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -304,7 +304,7 @@
            <string>Application settings</string>
           </property>
           <property name="icon">
-           <iconset theme="configure">
+           <iconset theme="preferences-other">
             <normaloff>.</normaloff>.</iconset>
           </property>
          </widget>
