--- a/src/settings/settingsdialog.ui
+++ b/src/settings/settingsdialog.ui
@@ -767,15 +767,15 @@
               <property name="title">
                <string notr="true">Mozhi</string>
               </property>
-              <layout class="QFormLayout" name="formLayout_11">
-               <item row="0" column="0">
+              <layout class="QHBoxLayout" name="horizontalLayout">
+               <item>
                 <widget class="QLabel" name="mozhiUrlLabel">
                  <property name="text">
                   <string notr="true">URL:</string>
                  </property>
                 </widget>
                </item>
-               <item row="0" column="1">
+               <item>
                 <widget class="QComboBox" name="mozhiUrlComboBox">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
@@ -784,13 +784,23 @@
                   </sizepolicy>
                  </property>
                  <property name="toolTip">
-                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Lingva engine URL&lt;/p&gt;&lt;p&gt;All instances can be found here: https://github.com/TheDavidDelta/lingva-translate#instances&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                  <string>Mozhi instance URL</string>
                  </property>
                  <property name="editable">
                   <bool>true</bool>
                  </property>
                  <property name="currentText">
                   <string notr="true"/>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="detectFastestButton">
+                 <property name="toolTip">
+                  <string>Automatically pick the fastest instance based on the ping</string>
+                 </property>
+                 <property name="text">
+                  <string>Detect fastest</string>
                  </property>
                 </widget>
                </item>
@@ -2042,6 +2052,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>detectFastestButton</sender>
+   <signal>clicked()</signal>
+   <receiver>SettingsDialog</receiver>
+   <slot>detectFastestInstance()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>262</x>
+     <y>26</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>424</x>
+     <y>329</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>onProxyTypeChanged(int)</slot>
@@ -2064,8 +2090,6 @@
   <slot>removeCurrent()</slot>
   <slot>onTesseractParametersCurrentItemChanged()</slot>
   <slot>setCurrentPage(int)</slot>
-  <slot>onGoogleLanguageSelectionChanged(int)</slot>
-  <slot>saveGoogleEngineRegion(int)</slot>
-  <slot>detectGoogleTextLanguage()</slot>
+  <slot>detectFastestInstance()</slot>
  </slots>
 </ui>
