--- a/src/popupwindow.ui
+++ b/src/popupwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>405</width>
+    <width>655</width>
     <height>296</height>
    </rect>
   </property>
@@ -46,7 +46,7 @@
     </layout>
    </item>
    <item>
-    <widget class="QTextEdit" name="translationEdit">
+    <widget class="TranslationEdit" name="translationEdit">
      <property name="readOnly">
       <bool>true</bool>
      </property>
@@ -55,7 +55,56 @@
    <item>
     <layout class="QHBoxLayout" name="buttomLayout">
      <item>
-      <widget class="SpeakButtons" name="sourceSpeakButtons" native="true"/>
+      <widget class="QToolButton" name="sourcePlayPauseButton">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="sourceVoiceComboBox">
+       <property name="minimumSize">
+        <size>
+         <width>150</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="sizeAdjustPolicy">
+        <enum>QComboBox::AdjustToContents</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="sourceSpeakerComboBox">
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="sizeAdjustPolicy">
+        <enum>QComboBox::AdjustToContents</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="sourceStopButton">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QToolButton" name="copySourceButton">
@@ -148,7 +197,56 @@
       </widget>
      </item>
      <item>
-      <widget class="SpeakButtons" name="translationSpeakButtons" native="true"/>
+      <widget class="QToolButton" name="translationPlayPauseButton">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="translationVoiceComboBox">
+       <property name="minimumSize">
+        <size>
+         <width>150</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="sizeAdjustPolicy">
+        <enum>QComboBox::AdjustToContents</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="translationSpeakerComboBox">
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="sizeAdjustPolicy">
+        <enum>QComboBox::AdjustToContents</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="translationStopButton">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QToolButton" name="copyAllTranslationButton">
@@ -176,20 +274,15 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>SpeakButtons</class>
-   <extends>QWidget</extends>
-   <header>speakbuttons.h</header>
-   <container>1</container>
-   <slots>
-    <signal>playerMediaRequested()</signal>
-    <slot>stopSpeaking()</slot>
-   </slots>
-  </customwidget>
-  <customwidget>
    <class>LanguageButtonsWidget</class>
    <extends>QWidget</extends>
    <header>languagebuttonswidget.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>TranslationEdit</class>
+   <extends>QTextEdit</extends>
+   <header>translationedit.h</header>
   </customwidget>
  </customwidgets>
  <resources>
